crates/tplot/tests/snapshots/e2e_bar__bar_default.snap
---
source: crates/tplot/tests/e2e_bar.rs
expression: strip_ansi(&out)
---
   NA  ████████████████████████████████████████████████████████████       179
                                                                        
 EMEA  █████████████████████████████████████████████████████████████████  193
                                                                        
LATAM  ██████████████████████████                                         78
                                                                        
 APAC  █████████████████████████████████                                  97
                                                                        
   AU  ██████████████████                                                 53
                                                                        

       EMEA led with 193, the highest of 5 series.
